<resources>
    <string name="app_name">Gym Buddy</string>
    <string name="button_diets">Diet</string>
    <string name="button_workout">Workout</string>
    <string name="label_add_log">Add a Log:</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="hint_add_log">// add text here</string>
    <string name="label_diet_history">Diet History:</string>
    <string name="label_workout_history"> Workout History:</string>
    <string name="button_start_run">New Run!</string>
    <string name="button_run_history">Run History</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="pause">Pause</string>
    <string name="run_item_date">"%1$tb %1$td %1$tR</string>
    <string name="run_item_steps">%1$s steps</string>
    <string name="run_item_distance">Distance: %1$.3f miles</string>
    <string name="run_item_time">Run Time: %1$s</string>

</resources>
