<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/fragment_run_list_item"
        card_view:cardCornerRadius="8dp"
        android:layout_marginBottom="16dp"
        android:background="#36819C">
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <TextView
            android:id="@+id/run_item_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="Date ####"
            android:fontFamily="@font/metropolis_regular"
            android:textColor="#000000"/>
    <TextView
        android:id="@+id/run_item_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/run_item_time"
        android:fontFamily="@font/metropolis_regular"
        android:textColor="#000000"/>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
    <TextView
            android:id="@+id/run_item_steps_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:textSize="16sp"
            android:text="@string/run_item_steps"
            android:fontFamily="@font/metropolis_regular"
            android:textColor="#000000"
            android:textAlignment="center"/>
    <TextView
            android:id="@+id/run_item_distance_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:text="@string/run_item_distance"
            android:fontFamily="@font/metropolis_regular"
            android:textAlignment="center"
            android:textColor="#000000"/>
</LinearLayout>
</LinearLayout>


</androidx.cardview.widget.CardView>